fixed footer in team and profile to look better on mobile

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -630,7 +630,7 @@ a:hover {
 @media screen and (max-width: 600px){
     .footer2 {
         bottom: -500px;
-        width: 75%;
+        width: 58.8%;
     }
 }
 
